@@ -2,6 +2,12 @@ Mahout Change Log
 
 Release 0.10.2 - unreleased
 
+  MAHOUT-1754: Distance and squared distance matrices routines (dlyubimov)
+
+  MAHOUT-1753: First and second moment routines (dlyubimov)
+
+  MAHOUT-1746: mxA ^ 2, mxA ^ 0.5 to mean the same thing as mxA * mxA and mxA ::= sqrt _ (dlyubimov)
+
   MAHOUT-1660: Hadoop1HDFSUtil.readDRMHEader should be taking Hadoop conf (dlyubimov)
 
   MAHOUT-1713: Performance and parallelization improvements for AB', A'B, A'A spark physical operators (dlyubimov)
